[project]
name = "cc-sessions-tui"
version = "0.1.0"
description = "Terminal UI for browsing and resuming Claude Code sessions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["claude", "anthropic", "tui", "terminal", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
]

[project.scripts]
cc-sessions = "cc_sessions_tui:main"

[project.urls]
Homepage = "https://github.com/kbinkly/cc-sessions-tui"
Repository = "https://github.com/kbinkly/cc-sessions-tui"
Issues = "https://github.com/kbinkly/cc-sessions-tui/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
